<resources>
    <string name="app_name">StockAnalyzer</string>
    <string name="str_stock">Stock</string>
    <string name="str_code">Code</string>
    <string name="str_name">Name</string>
    <string name="str_add">Add</string>
    <string name="str_delete">Delete</string>
    <string name="str_addedit">Add/Edit</string>
    <string name="str_save">Save</string>
    <string name="str_colon">:</string>
    <string name="str_price">Price</string>
    <string name="str_graph">Graph</string>
    <string name="str_analysis">Analysis</string>
</resources>
